erDiagram
    EVENT {
        UUID identifier PK
        VARCHAR name
        TEXT description
        TIMESTAMP event_date
        VARCHAR creator
        VARCHAR location
        EVENT_TYPE type
    }
    PARTICIPANT {
        UUID id PK
        VARCHAR user_email
        UUID event_id FK
        VARCHAR status
    }
    RESOURCE {
        UUID id PK
        VARCHAR name
        VARCHAR category
        INT suggested_quantity
        INT current_quantity
        INT version
        UUID event_id FK
    }
    CONTRIBUTION {
        UUID id PK
        UUID participant_id FK
        UUID resource_id FK
        INT quantity
    }
    EVENT ||--o{ PARTICIPANT : "heberge"
    EVENT ||--o{ RESOURCE : "necessite"
    PARTICIPANT ||--o{ CONTRIBUTION : "apporte"
    RESOURCE ||--o{ CONTRIBUTION : "recoit"
